--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+spring.profiles.active=test
+
+# Só disponibiliza o JPA ate a camada de Servico,
+# na camada Web(Controller) ele já não esta mais disponível.
+spring.jpa.open-in-view=false
