--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.profiles.active=test
+spring.profiles.active=prod
 
 # Só disponibiliza o JPA ate a camada de Servico,
 # na camada Web(Controller) ele já não esta mais disponível.
